# apical-event

./: .env.example  .gitignore  Dockerfile  README.md  agents.md  apical_event_spec_v0.4.md  apical_event_spec_v0.5.md  apical_event_task_cards_v2.md  docker-compose.yaml  initial_prompt.md  phase2_prompt.md  phase3_prompt.md  phase4_prompt.md  phase5_prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  reset_and_test_build.sh
.github/workflows/: ci.yaml
config/: providers.default.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: ErrorBoundary.tsx  PresetSelector.tsx  RoleCard.tsx  SettingsPanel.tsx  Sidebar.tsx  Toast.tsx
frontend/src/hooks/: useRollCall.ts
frontend/src/pages/: RollCall.tsx  SessionList.tsx  SetupWizard.tsx  Workbench.tsx
scripts/: dev.sh  docker-entrypoint.sh
src/api/: app.py  dependencies.py
src/apical_event.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/api/: test_routes.py  test_websocket.py
tests/core/: test_config.py  test_context.py  test_journals.py  test_prompt_assembly.py  test_providers.py  test_schemas.py
tests/fixtures/: expected_agent_prompt.txt  expected_consensus_prompt.txt  expected_moderator_prompt.txt  valid_packet.json  valid_roll_call.json
tests/integration/: test_full_loop.py  test_packet_to_session.py  test_session_to_dispatch.py
tests/orchestration/: test_consensus.py  test_engine.py  test_tools.py
tmp/: session.json
(+68 files in other folders)
