[project]
name = "apical-event"
version = "0.1.0"
description = "Apical-Event backend"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.dependencies]
fastapi = "==0.115.0"
uvicorn = { version = "==0.30.0", extras = ["standard"] }
pydantic = "==2.7.0"
pyyaml = "==6.0.1"
httpx = "==0.27.0"
langgraph = "==0.2.0"
langchain-core = "==0.3.0"

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "httpx[test]==0.27.0",
  "ruff==0.5.5",
  "black==24.4.2",
  "pip-tools==7.4.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
