[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apical-event"
version = "0.1.0"
description = "Apical-Event backend"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "langgraph>=0.2",
  "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "httpx[test]==0.27.0",
  "ruff==0.5.5",
  "black==24.4.2",
  "pip-tools==7.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]
